spacing fix

--- a/wp-content/themes/sixgill/css/custom/all_general.css
+++ b/wp-content/themes/sixgill/css/custom/all_general.css
@@ -285,3 +285,7 @@ ul:not([class]) li:not(.has-span):before, .bullet-color {
 .share-buttons-list {
 	list-style-type: none;
 }
+
+.share-buttons-list li:last-of-type img {
+	margin-bottom: 0px;
+}
